// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`provenance functions buildSLSAProvenancePredicate returns a provenance from an org required workflow: provenance from org required workflow 1`] = `
{
  "params": {
    "buildDefinition": {
      "buildType": "https://actions.github.io/buildtypes/workflow/v1",
      "externalParameters": {
        "workflow": {
          "path": ".github/workflows/enforce.yml",
          "ref": "refs/heads/vetted",
          "repository": "https://foo.ghe.com/enterprise/org-workflows",
        },
      },
      "internalParameters": {
        "github": {
          "event_name": "push",
          "repository_id": "repo-id",
          "repository_owner_id": "owner-id",
          "runner_environment": "github-hosted",
        },
      },
      "resolvedDependencies": [
        {
          "digest": {
            "gitCommit": "babca52ab0c93ae16539e5923cb0d7403b9a093b",
          },
          "uri": "git+https://foo.ghe.com/owner/repo@refs/heads/main",
        },
      ],
    },
    "runDetails": {
      "builder": {
        "id": "https://foo.ghe.com/enterprise/org-workflows/.github/workflows/enforce.yml@refs/heads/vetted",
      },
      "metadata": {
        "invocationId": "https://foo.ghe.com/owner/repo/actions/runs/run-id/attempts/run-attempt",
      },
    },
  },
  "type": "https://slsa.dev/provenance/v1",
}
`;

exports[`provenance functions buildSLSAProvenancePredicate returns a provenance hydrated from an OIDC token: provenance with OIDC token 1`] = `
{
  "params": {
    "buildDefinition": {
      "buildType": "https://actions.github.io/buildtypes/workflow/v1",
      "externalParameters": {
        "workflow": {
          "path": ".github/workflows/main.yml",
          "ref": "refs/heads/main",
          "repository": "https://foo.ghe.com/owner/repo",
        },
      },
      "internalParameters": {
        "github": {
          "event_name": "push",
          "repository_id": "repo-id",
          "repository_owner_id": "owner-id",
          "runner_environment": "github-hosted",
        },
      },
      "resolvedDependencies": [
        {
          "digest": {
            "gitCommit": "babca52ab0c93ae16539e5923cb0d7403b9a093b",
          },
          "uri": "git+https://foo.ghe.com/owner/repo@refs/heads/main",
        },
      ],
    },
    "runDetails": {
      "builder": {
        "id": "https://foo.ghe.com/owner/workflows/.github/workflows/publish.yml@refs/heads/main",
      },
      "metadata": {
        "invocationId": "https://foo.ghe.com/owner/repo/actions/runs/run-id/attempts/run-attempt",
      },
    },
  },
  "type": "https://slsa.dev/provenance/v1",
}
`;
